<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingTop="50dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:lines="3"
        android:text="@string/title_2"
        android:textColor="@color/cenes_dark_gray"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/tv_title"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/onboarding_2" />

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|top"
        android:lines="3"
        android:padding="5dp"
        android:text="@string/ins_2"
        android:textColor="@color/cenes_light_gray"
        android:textSize="17sp" />

    <Button
        android:id="@+id/gs_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/cenes_new_orange"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:visibility="invisible" />
</RelativeLayout>