<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/gs_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gs_image"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/gs_heading"
        android:textColor="@color/cenes_dark_gray"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/gs_image"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/gs_instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/onboarding_4" />

    <TextView
        android:id="@+id/gs_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gs_button"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal|top"
        android:lines="5"
        android:padding="25dp"
        android:text="@string/gs_ins"
        android:textColor="@color/cenes_light_gray"
        android:textSize="17sp" />

    <Button
        android:id="@+id/gs_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/cenes_red"
        android:clickable="true"
        android:text="@string/get_started"
        android:textColor="@color/white" />
</RelativeLayout>
