<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guest_bg">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_signup_block"
        />
    <RelativeLayout
        android:id="@+id/rl_signup_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:text="@string/signup_btn_text"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_header"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:id="@+id/ll_forgetpassowrd_form"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/forgot_password_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/et_fp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/add_people_icon"
            android:drawablePadding="20dp"
            android:hint="@string/forgot_password_hint"
            android:padding="20dp" />

        <Button
            android:id="@+id/bt_fp_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_footer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_red_solid"
            android:text="SUBMIT"
            android:textColor="@color/white" />

    </LinearLayout>

  </RelativeLayout>