<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient_header">

        <com.deploy.util.RoundedImageView
            android:id="@+id/home_profile_pic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:background="@drawable/badge_notify_icon" />
        <TextView
            android:id="@+id/tv_notification_count_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginTop="23dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="38dp"/>

        <com.deploy.util.CenesTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/my_reminders"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:fontName="@string/font_lato_regular" />

        <ImageView
            android:id="@+id/create_reminder_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:src="@drawable/add_item_icon" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/reminder_list_header_label"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/reminder_headings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <com.deploy.util.CenesTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom_gray"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/filing_icon"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:text="@string/reminders"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:fontName="@string/font_lato_regular" />

            <ListView
                android:id="@+id/reminder_urgent_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/cenes_light_gray"
                android:dividerHeight="1dp"
                android:visibility="gone" />

            <com.deploy.util.CenesTextView
                android:id="@+id/reminder_urgent_no_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/no_reminders_text"
                android:textColor="@color/cenes_new_orange"
                android:textSize="18sp"
                android:visibility="visible"
                app:fontName="@string/font_lato_regular" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reminder_completed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom_gray"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <com.deploy.util.CenesTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/filing_icon"
                    android:gravity="center_vertical"
                    android:text="@string/completed"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:fontName="@string/font_lato_regular" />

                <ImageButton
                    android:id="@+id/ibDeleteCompletedReminders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@color/transparent"
                    android:padding="3dp"
                    android:src="@drawable/ic_delete"
                    android:visibility="gone" />
            </LinearLayout>

            <ListView
                android:id="@+id/reminder_done_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/cenes_light_gray"
                android:dividerHeight="1dp"
                android:visibility="gone" />

            <com.deploy.util.CenesTextView
                android:id="@+id/reminder_done_no_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/no_completed_reminders_text"
                android:textColor="@color/cenes_new_orange"
                android:textSize="18sp"
                android:visibility="visible"
                app:fontName="@string/font_lato_regular" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
