<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cenes_very_light_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_icon" />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="30dp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:background="@drawable/badge_notify_icon" />
            <TextView
                android:id="@+id/tv_notification_count_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>


        <com.cenes.util.CenesTextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="Name"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:fontName="@string/font_lato_regular" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_et_white_bg"
        android:orientation="vertical"
        android:paddingStart="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="5">

            <com.cenes.util.CenesTextView
                android:id="@+id/tvNotifications"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@color/transparent"
                android:padding="15dp"
                android:text="Notifications"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:fontName="@string/font_lato_regular" />
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:background="@drawable/badge_notify_icon" />
                <TextView
                    android:id="@+id/tv_notification_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"/>
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/cenes_light_gray" />

        <com.cenes.util.CenesTextView
            android:id="@+id/tvProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="15dp"
            android:text="Profile"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:fontName="@string/font_lato_regular" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_et_white_bg"
        android:orientation="vertical"
        android:paddingStart="10dp">

        <com.cenes.util.CenesTextView
            android:id="@+id/tvMeTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="15dp"
            android:text="Me Time"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:fontName="@string/font_lato_regular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/cenes_light_gray" />

        <com.cenes.util.CenesTextView
            android:id="@+id/tvCalendarSync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="15dp"
            android:text="Calendar Sync"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:fontName="@string/font_lato_regular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/cenes_light_gray" />

        <com.cenes.util.CenesTextView
            android:id="@+id/tvHolidayCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="15dp"
            android:text="Holiday Calendar"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:fontName="@string/font_lato_regular" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_et_white_bg"
        android:orientation="vertical"
        android:paddingStart="10dp">

        <com.cenes.util.CenesTextView
            android:id="@+id/tvHelpAndFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="15dp"
            android:text="@string/help_feedback"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:fontName="@string/font_lato_regular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/cenes_light_gray" />

        <com.cenes.util.CenesTextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="15dp"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:fontName="@string/font_lato_regular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/cenes_light_gray" />

        <com.cenes.util.CenesTextView
            android:id="@+id/tvLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="15dp"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:fontName="@string/font_lato_regular" />

    </LinearLayout>

</LinearLayout>